--- a/CLIENT/index.html
+++ b/CLIENT/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://img.icons8.com/?size=64&id=gHz81sjiKcd6&format=png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OrientPro</title>
   </head>
